# wsrs

./: .gitignore  AGENTS.md  BEST_PRACTICES.md  BEST_PRACTICES_CN.md  Cargo.toml  README.md  README_CN.md
.github/workflows/: ci.yml
.sisyphus/: boulder.json
.sisyphus/drafts/: performance-optimization.md  rust-best-practices-refactoring.md  websocket-implementation.md
.sisyphus/plans/: concurrency-framework.md  performance-optimization.md  rust-best-practices.md
autobahn/: README.md  fuzzingclient.json
benches/: benchmarks.rs
docs/: API.md  GUIDE.md
examples/: autobahn_server.rs  axum_server.rs  client.rs  echo_server.rs  stress_client.rs  stress_server.rs  wss_client.rs
scripts/: install-hooks.sh
src/: config.rs  error.rs  lib.rs  message.rs
src/codec/: framed.rs  mod.rs
src/connection/: connection.rs  fragmenter.rs  mod.rs  role.rs  state.rs
src/extensions/: deflate.rs  mod.rs
src/protocol/: assembler.rs  frame.rs  handshake.rs  mask.rs  mod.rs  opcode.rs  utf8.rs  utf8_simd.rs  validation.rs
src/tls/: mod.rs  native.rs  rustls_impl.rs
tests/: autobahn.rs  concurrency.rs  property.rs  stress.rs  tls_integration.rs
tests/harness/: client.rs  metrics.rs  mod.rs  server.rs
