[package]
name = "rsws"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "1.0"
sha1 = "0.10"
base64 = "0.22"

# Async runtime (feature-gated)
tokio = { version = "1.36", features = ["io-util", "net", "sync"], optional = true }
bytes = { version = "1.5", optional = true }
futures-core = { version = "0.3", optional = true }

# Compression support (feature-gated)
flate2 = { version = "1.0", optional = true }

# TLS support (feature-gated)
tokio-rustls = { version = "0.26", optional = true }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"], optional = true }
rustls-pemfile = { version = "2.1", optional = true }
webpki-roots = { version = "0.26", optional = true }
native-tls = { version = "0.2", optional = true }
tokio-native-tls = { version = "0.3", optional = true }

[dev-dependencies]
proptest = "1.4"
tokio = { version = "1.36", features = ["full", "test-util"] }
rcgen = "0.13"
criterion = "0.5"

[[bench]]
name = "benchmarks"
harness = false

[[example]]
name = "stress_server"
path = "examples/stress_server.rs"

[[example]]
name = "stress_client"
path = "examples/stress_client.rs"

[features]
default = ["async-tokio"]
async-tokio = ["tokio", "bytes", "futures-core"]
tls-rustls = ["async-tokio", "tokio-rustls", "rustls", "rustls-pemfile", "webpki-roots"]
tls-native = ["async-tokio", "native-tls", "tokio-native-tls"]
compression = ["flate2"]
